# trading-framework

./: .coverage  .editorconfig  .env.exemple  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  dump_structure.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-lock.txt  setup.cfg  structure.txt
.github/workflows/: ci.yml
docs/: api_overview.md  index.md  logging_config.md  main_module.md
src/: __main__.py  logging_config.py
src/core/: market_types.py
src/data/: __init__.py  alpaca_pipeline.py  transform.py
src/trading_framework/: __init__.py  __main__.py  logging_config.py
src/trading_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trading_framework/core/: interfaces.py  market_types.py
src/trading_framework/data/: alpaca_pipeline.py
tests/integration/: test_coverage_placeholder  test_main.py
tests/unit/: test_logging_config.py  test_smoke.py
