[project]
name = "trading-framework"
version = "0.1.0"
description = "Framework modulaire pour trading algorithmique avec Alpaca"
authors = [{ name = "Richard BROUQUIER", email = "brouquier57@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "pandas==2.3.1",
    "numpy==2.3.1",
    "matplotlib==3.10.3",
    "scipy==1.16.0",
    "tqdm==4.67.1",
    "ta==0.11.0",
    "loguru==0.7.3",
    "joblib==1.5.1",
    "alpaca-trade-api==3.2.0",
    "python-dotenv==1.1.1"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.bumpversion]
current_version = "0.1.0"
commit          = true
tag             = true

[tool.bumpversion.file]

[tool.bumpversion.file."pyproject.toml"]
search  = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.file."src/trading_framework/__init__.py"]
search  = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.black]
line-length = 79       # ou 100, 120… selon votre préférence
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 79
# Flake8 attend une liste de codes, pas du texte séparé par des virgules :
extend-ignore = ["E203", "W503"]
# Exclure via un array TOML :
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.mypy]
strict = true
python_version = "3.13"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "isort==6.0.1",
    "flake8==7.3.0",
    "mypy==1.17.0",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pip-tools==7.4.1",
    "pip-autoremove==0.10.0",
    "bump2version==1.0.1",
    "pip-audit==2.9.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.15"
]

[project.scripts]
run-strategy = "trading_framework.__main__:main"
