[project]
name = "trading-framework"
version = "0.1.0"
description = "Framework modulaire pour trading algorithmique avec Alpaca"
authors = [{ name = "Richard BROUQUIER", email = "brouquier57@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "pandas==2.3.1",
    "numpy==2.3.1",
    "matplotlib==3.10.3",
    "scipy==1.16.0",
    "tqdm==4.67.1",
    "ta==0.11.0",
    "loguru==0.7.3",
    "joblib==1.5.1",
    "alpaca-trade-api==3.2.0",
    "python-dotenv==1.1.1"
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.bumpversion]
current_version = "0.1.0"
commit          = true
tag             = true

[tool.bumpversion.file]

[tool.bumpversion.file."pyproject.toml"]
search  = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.file."src/trading_framework/__init__.py"]
search  = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.black]
line-length = 79
target-version = ['py311']

[tool.ruff]
line-length = 79
select = ["E", "F", "I", "UP", "B", "C"]
extend-ignore = ["E203"]
exclude = ["__pycache__", "build", "dist", ".venv", ".git"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "trading_framework.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "mypy==1.17.0",
    "ruff==v0.12.4",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pip-tools==7.4.1",
    "pip-autoremove==0.10.0",
    "bump2version==1.0.1",
    "pip-audit==2.9.0",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.15"
]

[project.scripts]
run-strategy = "trading_framework.__main__:main"
