[project]
name = "trading-framework"
version = "0.1.0"
description = "Framework modulaire pour trading algorithmique avec Alpaca"
authors = [{ name = "Richard BROUQUIER", email = "brouquier57@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
 
dependencies = [
    "pandas>=2.3,<3",
    "numpy>=2.3,<3",
    "loguru>=0.7,<1",
    "alpaca-trade-api>=3.2,<4",
    "python-dotenv>=1.1,<2"
]

[project.urls]
homepage      = "https://github.com/RBrouq/trading-framework"
repository    = "https://github.com/RBrouq/trading-framework"
documentation = "https://RBrouq.github.io/trading-framework/"

[project.optional-dependencies]
dev = [
    "mypy==1.17.0",
    "ruff==0.12.4",
    "pre-commit==4.2.0",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pip-tools==7.4.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.15"
]

[project.scripts]
run-strategy = "trading_framework.__main__:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.bumpversion]
current_version = "0.1.0"
commit          = true
tag             = true

[tool.bumpversion.file]

[tool.bumpversion.file."pyproject.toml"]
search  = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.bumpversion.file."src/trading_framework/__init__.py"]
search  = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.ruff]
line-length = 79
exclude = ["__pycache__", "build", "dist", ".venv", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C"]
extend-ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
python_version = "3.11"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "trading_framework.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false


[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"


